src/test/06-Errors/error-auto-global.txt
error-auto-global.ck:1:13: error: unsupported type for global keyword: auto
[1] 1 => global auto a;
                ^
error-auto-global.ck: (supported types: int, float, string, Event, UGen, Object)
